--- a/src/styles.css
+++ b/src/styles.css
@@ -189,3 +189,74 @@ body {
     touch-action: manipulation;
   }
   
+
+  .Snorlax-header {
+
+    background-color: #011949;
+    margin-top: 70px;
+    padding: 0 0 0 5rem; 
+    min-height: 80vh;
+    /* display: flex; */
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    font-size: calc(20px + 2vmin);
+    font-weight: 500;
+    color: white;
+  }
+
+  
+  .Snorlax-subtitle {
+    background-color: #011949; 
+    padding: 0 2rem 0 0; /*top, right, bot, left*/
+    min-height: 30vh;
+    display: flex;
+    /* flex-direction: column; */
+    flex: 50%;
+    align-items: flex-start;
+    justify-content: center;
+    font-size: calc(5px + 2vmin);
+    font-weight: normal;
+    color: white;
+  }
+
+.Snorlax-text-subtitle{
+  background-color: #011949; 
+  padding: 0 4rem 0 0; /*top, right, bot, left*/
+  /* min-height: 30vh; */
+  line-height: 3;
+  display: flex;
+  flex-direction: left; 
+   flex: 2%;
+  align-items: left;
+  justify-content: left;
+  text-align: left;
+  font-size: calc(8px + 2vmin);
+  font-weight: normal;
+  display: flex;
+  color: white;
+}
+
+  .Snorlax-logo {
+    /* height: 40vmin; */
+    margin: 0 0 -10px auto;
+    display: block;
+    width: 50%;
+    height: auto;
+  }
+
+  .Snorlax-button-style{
+    background-color: #011949; 
+    padding: 0 4rem 0 0; /*top, right, bot, left*/
+    /* min-height: 30vh; */
+    line-height: 3;
+    display: flex;
+    flex-direction: left; 
+     flex: 2%;
+    align-items: flex-start;
+    justify-content: left;
+    text-align: left;
+    font-size: calc(8px + 2vmin);
+    font-weight: normal;
+    color: white;
+  }
